--- a/invoice.html
+++ b/invoice.html
@@ -140,7 +140,7 @@
                         </div>
                     </div>
                     <div class="btn-group dropup">
-                        <button class="tools_btn dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown"
+                        <button class="tools_btn dropdown-toggle dropdown-toggle-split rounded-3" data-bs-toggle="dropdown"
                             aria-expanded="false"><i class="fa-solid fa-ellipsis"></i></button>
                         <ul class="dropdown-menu border-0 shadow rounded-3 bg-white customizeAndSettingsarea">
                             <li class="position-relative sortByListBtn">
