--- a/showInvoice.html
+++ b/showInvoice.html
@@ -878,7 +878,7 @@
                                 <h1>
                                     INV -003
                                 </h1>
-                                <div class="d-flex justify-content-end align-items-center gap-3">
+                                <div class="d-flex justify-content-end align-items-center flex-wrap gap-3">
                                     <a href="#" class="upload_file"><i
                                             class="fa-solid fa-paperclip me-2 text-primary"></i>upload file</a>
                                     <a href="#" class="commentHistory"><i
@@ -888,7 +888,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="invoice_navbar">
+                        <div class="invoice_navbar flex-wrap">
                             <a href="#" class="nav_items_link">
                                 <i class="fa-regular fa-pen-to-square me-2"></i>
                                 edit
