--- a/createInvoice.html
+++ b/createInvoice.html
@@ -11,8 +11,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
     <!-- bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
     <!-- font awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
         integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
@@ -21,10 +21,10 @@
     <link rel="stylesheet" href="assets/styles.css">
 </head>
 
-<body>
+<body class="bg-light">
     <div class="invoice_wrapper">
-        <div class="newInvoice_area">
-            <div class="new_inv_header d-flex justify-content-between align-items-center gap-3">
+        <div class="newInvoice_area ">
+            <div class="new_inv_header bg-white d-flex justify-content-between align-items-center gap-3">
                 <h1>
                     <i class="fa-solid fa-file-invoice me-3"></i>
                     new invoice
@@ -34,18 +34,63 @@
                     <button><i class="fa-solid fa-xmark"></i></button>
                 </div>
             </div>
-           <div class="container">
-             <form action="" class=" bg-white  fs-14">
-                <div class="row g-4">
-                    <div class="col-12  bg-light ">
-                        <label for="" class="mb-1">Customer Name <span class="text-danger">*</span></label>
-                        <select name="" id="" class="form-select rounded-4 fs-14">
-                            <option value="">Select Customer</option>
-                        </select>
+            <form action="" class=" fs-14 p-3">
+                <!-- customer information area start -->
+                <div class="row g-md-4 g-0 py-5">
+                    <div class="col-xl-2 col-lg-2 col-md-3">
+                        <div class="h-100 d-flex align-items-center">
+                            <label for="" class="text-danger">Customer Name*</label>
+                        </div>
+                    </div>
+                    <div class="col-xl-6 col-lg-6 col-md-9">
+                        <div class="d-flex align-items-center flex-nowrap position-relative">
+                            <input type="text" id="selectedCustomerInput"
+                                class="form-select customer-select-input w-100 rounded-end-0 rounded-start-3 fs-14"
+                                placeholder="Select Customer" readonly>
+
+                            <button class="customer-dropdown-toggle searchbtn flex-shrink-0 py-2 rounded-end-3 rounded-start-0"
+                                type="button">
+                                <i class="fa-solid fa-magnifying-glass"></i>
+                            </button>
+
+                            <div class="customer-dropdown-menu rounded-3 p-2 bg-white shadow position-absolute z-1 d-none"
+                                id="customerDropdown" style="top: 100%; left: 0; width: 100%;">
+                                <!-- Search input -->
+                                <div class="position-relative mb-3">
+                                    <input class="form-control rounded-4 customer-search-input" id="customerSearchInput"
+                                        placeholder="Search Customer..." style="padding-left: 35px;" type="search">
+                                    <span class="position-absolute top-50 translate-middle-y " style="left: 10px;">
+                                        <i class="fa-solid fa-magnifying-glass"></i>
+                                    </span>
+                                </div>
+
+                                <!-- Customer list -->
+                                <div class="customer-list-area">
+                                    <ul class="p-3 mb-0 list-unstyled" id="customerList">
+                                        <li><button class="w-100 text-start customer-item">John Doe</button></li>
+                                        <li><button class="w-100 text-start customer-item">Jane Smith</button></li>
+                                        <li><button class="w-100 text-start customer-item">Michael Johnson</button></li>
+                                        <li><button class="w-100 text-start customer-item">Emily Davis</button></li>
+                                    </ul>
+                                </div>
+
+                                <!-- New customer view button -->
+                                <div class="new-customer-view px-3 py-2 mt-2 border-top">
+                                    <button class="d-flex justify-content-start align-items-center gap-3 w-100">
+                                        <span class="icon"><i class="fa-solid fa-circle-plus"></i></span>
+                                        <span class="content">New Customer</span>
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+
                     </div>
                 </div>
+                <!-- customer information area start -->
+
+                <!-- invoice details area start -->
+                <!-- invoice details area end -->
             </form>
-           </div>
         </div>
     </div>
 
@@ -53,9 +98,7 @@
 
 
     <!-- bootstrap -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
-    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- jquery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <!-- font awesome -->
