--- a/createInvoice.html
+++ b/createInvoice.html
@@ -48,7 +48,8 @@
                                 class="form-select customer-select-input w-100 rounded-end-0 rounded-start-3 fs-14"
                                 placeholder="Select Customer" readonly>
 
-                            <button class="customer-dropdown-toggle searchbtn flex-shrink-0 py-2 rounded-end-3 rounded-start-0"
+                            <button
+                                class="customer-dropdown-toggle searchbtn flex-shrink-0 py-2 rounded-end-3 rounded-start-0"
                                 type="button">
                                 <i class="fa-solid fa-magnifying-glass"></i>
                             </button>
@@ -89,7 +90,192 @@
                 <!-- customer information area start -->
 
                 <!-- invoice details area start -->
+                <div class="invoice_details_area bg-white py-4 border-bottom">
+                    <div class="row g-md-4 g-0 py-4">
+                        <div class="col-xl-2 col-lg-2 col-md-3">
+                            <div class="h-100 d-flex align-items-center">
+                                <label for="" class="text-danger">Invoice#*</label>
+                            </div>
+                        </div>
+                        <div class="col-xl-4 col-lg-4 col-md-9">
+                            <div class="position-relative">
+                                <input type="text" class="form-control rounded-3 " style="padding-right: 40px; "
+                                    placeholder="Enter Invoice Number">
+                                <button class="invoiceSettingBtn position-absolute translate-middle-y top-50"
+                                    style="right: 10px;">
+                                    <i class="fa-solid fa-gear"></i>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row g-md-4 g-0 py-4">
+                        <div class="col-xl-2 col-lg-2 col-md-3">
+                            <div class="h-100 d-flex align-items-center">
+                                <label for="">Order Number</label>
+                            </div>
+                        </div>
+                        <div class="col-xl-4 col-lg-4 col-md-9">
+                            <input type="text" class="form-control rounded-3 " placeholder="Enter Order Number">
+                        </div>
+                    </div>
+                    <div class="row g-md-4 g-3 py-4">
+                        <div class="col-xl-2 col-lg-2 col-md-3">
+                            <div class="h-100 d-flex align-items-center">
+                                <label for="" class="text-danger">Invoice Date</label>
+                            </div>
+                        </div>
+                        <div class="col-xl-4 col-lg-4 col-md-9">
+                            <input type="date" class="form-control rounded-3 " placeholder="Enter Date">
+                        </div>
+                        <div class="col-xl-3 col-lg-3 col-md-6">
+                            <div class="d-flex justify-content-between align-items-center gap-3">
+                                <div class="h-100 flex-shrink-0 d-flex align-items-center">
+                                    Terms
+                                </div>
+                                <div class="position-relative w-100" style="z-index: 1050;">
+                                    <!-- Input trigger -->
+                                    <input type="text" id="termsSelectInput" class="form-select w-100 rounded-3"
+                                        placeholder="Select Terms" readonly>
+
+                                    <!-- Custom dropdown -->
+                                    <div class="terms-dropdown-menu bg-white shadow rounded-3 p-2 position-absolute d-none"
+                                        id="termsDropdown" style="top: 100%; left: 0; width: 100%; z-index: 1055;">
+
+                                        <!-- Search input -->
+                                        <div class="position-relative mb-3">
+                                            <input class="form-control rounded-3" id="termsSearchInput"
+                                                placeholder="Search Terms..." style="padding-left: 35px;">
+                                            <span class="position-absolute top-50 translate-middle-y"
+                                                style="left: 10px;">
+                                                <i class="fa-solid fa-magnifying-glass"></i>
+                                            </span>
+                                        </div>
+
+                                        <!-- Terms list -->
+                                        <div class="terms-list-area">
+                                            <ul class="list-unstyled mb-2" id="termsList">
+                                                <li><button type="button" class="w-100 text-start term-item px-3 py-2"
+                                                        data-id="1">Net 7</button></li>
+                                                <li><button type="button" class="w-100 text-start term-item px-3 py-2"
+                                                        data-id="2">Net 15</button></li>
+                                                <li><button type="button" class="w-100 text-start term-item px-3 py-2"
+                                                        data-id="3">Net 30</button></li>
+                                                <li><button type="button" class="w-100 text-start term-item px-3 py-2"
+                                                        data-id="4">Due on Receipt</button></li>
+                                            </ul>
+                                        </div>
+
+                                        <!-- Bottom button -->
+                                        <div class="text-center border-top pt-2">
+                                            <button type="button" class="btn btn-outline-primary btn-sm"><i
+                                                    class="fa-solid fa-gear me-3"></i>Configure Terms</button>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <!-- Hidden field to store selected ID -->
+                                <input type="hidden" name="term_id" id="selectedTermId">
+
+                            </div>
+
+                        </div>
+                        <div class="col-xl-3 col-lg-3 col-md-6">
+                            <div class="d-flex justify-content-between align-items-center gap-3">
+                                <div class="h-100 flex-shrink-0 d-flex align-items-center text-nowrap">
+                                    Due Date
+                                </div>
+                                <input type="text" class="form-control w-100 rounded-3">
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 <!-- invoice details area end -->
+
+                <!-- ==========Salesperson area start========== -->
+                <div class="bg-white py-4 border-bottom">
+                    <div class="row g-md-4 g-0 py-4">
+                        <div class="col-xl-2 col-lg-2 col-md-3">
+                            <div class="h-100 d-flex align-items-center">
+                                <label for="">Sales Person</label>
+                            </div>
+                        </div>
+                        <div class="col-xl-4 col-lg-4 col-md-9">
+                            <div class="position-relative" style="z-index: 1050;">
+                                <!-- Input trigger -->
+                                <input type="text" id="salesPersonSelectInput" class="form-select rounded-3"
+                                    placeholder="Select Sales Person" readonly>
+
+                                <!-- Custom dropdown -->
+                                <div class="salesperson-dropdown-menu bg-white shadow rounded-3 p-2 position-absolute d-none"
+                                    id="salesPersonDropdown" style="top: 100%; left: 0; width: 100%; z-index: 1055;">
+
+                                    <!-- Search input -->
+                                    <div class="position-relative mb-3">
+                                        <input class="form-control rounded-3" id="salesPersonSearchInput"
+                                            placeholder="Search Sales Person..." style="padding-left: 35px;">
+                                        <span class="position-absolute top-50 translate-middle-y" style="left: 10px;">
+                                            <i class="fa-solid fa-magnifying-glass"></i>
+                                        </span>
+                                    </div>
+
+                                    <!-- Sales person list -->
+                                    <div class="salesperson-list-area">
+                                        <ul class="list-unstyled mb-2" id="salesPersonList">
+                                            <li><button type="button"
+                                                    class="w-100 text-start salesperson-item px-3 py-2" data-id="1">Rana
+                                                    Ahmed</button></li>
+                                            <li><button type="button"
+                                                    class="w-100 text-start salesperson-item px-3 py-2" data-id="2">Sumi
+                                                    Akter</button></li>
+                                            <li><button type="button"
+                                                    class="w-100 text-start salesperson-item px-3 py-2"
+                                                    data-id="3">Mahfuz Rahman</button></li>
+                                            <li><button type="button"
+                                                    class="w-100 text-start salesperson-item px-3 py-2"
+                                                    data-id="4">Tania Islam</button></li>
+                                        </ul>
+                                    </div>
+
+                                    <!-- Bottom button -->
+                                    <div class="text-center border-top pt-2">
+                                        <button type="button" class="btn btn-outline-primary btn-sm"><i
+                                                class="fa-solid fa-gear me-3"></i> Manage Sales person</button>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <!-- Hidden field to store selected ID -->
+                            <input type="hidden" name="salesperson_id" id="selectedSalesPersonId">
+
+                        </div>
+                    </div>
+                </div>
+
+                <!-- ==========Salesperson area end========== -->
+
+
+                 <!-- =================subject area start=============== -->
+                    <div class="bg-white py-4 border-bottom">
+                    <div class="row g-md-4 g-0 py-4">
+                        <div class="col-xl-2 col-lg-2 col-md-3">
+                            <div class="h-100 d-flex align-items-start">
+                                <label for="">Subject</label>
+                            </div>
+                        </div>
+                        <div class="col-xl-4 col-lg-4 col-md-9">
+                           <textarea name="" id="" class="form-control" rows="4" placeholder="Let your customer know what this invoice is for"></textarea>
+                        </div>
+                    </div>
+                </div>
+                 <!-- =================subject area end=============== -->
+
+                 <!-- ==================Items add area start=================== -->
+                  <div class="items_add_area bg-white py-4 border-bottom">
+                    <div class="additems_header">
+                        <h1></h1>
+                    </div>
+                  </div>
+                 <!-- ==================Items add area end=================== -->
             </form>
         </div>
     </div>
