--- a/createInvoice.html
+++ b/createInvoice.html
@@ -41,7 +41,7 @@
                     </h1>
                     <!-- <div class="d-flex justify-content-end align-items-center ">
                         <button type="button"><i class="fa-solid fa-gear"></i></button> -->
-                    <button type="button"><i class="fa-solid fa-xmark"></i></button>
+                    <a href="invoice.html" class="text-dark" type="button"><i class="fa-solid fa-xmark"></i></a>
                 </div>
             </div>
             <div class="main_content_of_body">
